tests/baselines/reference/parserStrictMode12.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode12.ts(2,15): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode12.ts(2,19): error TS1100: Invalid use of 'eval' in strict mode.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode12.ts (2 errors) ====
    "use strict";
    var v = { set foo(eval) { } }
                  ~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
                      ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.